# mn-ligand

./: .gitignore  MANIFEST.in  PROJECT_BRIEF.md  PROJECT_CONTEXT.md  README.md  docker-compose.yml  environment.yml  pyproject.toml
containers/abfe/: Dockerfile
containers/admet/: Dockerfile  environment.yml
containers/boltz2/: Dockerfile  environment.yml
containers/docking/: Dockerfile  environment.yml
containers/md/: Dockerfile  environment-cu128.yml
containers/qc/: Dockerfile  environment.yml
containers/rbfe/: Dockerfile  environment.yml
containers/structure/: Dockerfile  environment.yml
mn_ligand/: __init__.py  cli.py  run_app.py
mn_ligand/app/components/: __init__.py
mn_ligand/app/pages/: abfe.py  admet.py  admet_results.py  batch_docking.py  boltz2.py  boltz2_ui.py  bound_ligand_md.py  common.py  docking.py  jobs.py  jobs_admet.py  jobs_md.py  jobs_md_system.py  jobs_openfe.py  jobs_qc.py  jobs_structure.py  md.py  md_production.py  md_results.py  md_system_preparation.py  openfe_results.py  qc.py  qc_results.py  rbfe.py  structure_preparation.py  structure_preparation_old.py  structure_results.py
mn_ligand/workflows/: __init__.py  bound_ligand_md.py
ovo_ligand/: __init__.py  cli.py  run_app.py
ovo_ligand/app/components/: __init__.py
ovo_ligand/app/pages/: abfe.py  admet.py  admet_results.py  batch_docking.py  boltz2.py  boltz2_ui.py  bound_ligand_md.py  common.py  docking.py  jobs.py  jobs_admet.py  jobs_md.py  jobs_md_system.py  jobs_openfe.py  md.py  (+14 more)
ovo_ligand/workflows/: __init__.py  bound_ligand_md.py
scripts/: openmm_mmgbsa.py
(+74 files in other folders)
