[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mn-ligand"
version = "0.0.1"
description = "Standalone Streamlit app for Docker-backed ligand modelling workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib",
  "mdtraj",
  "numpy",
  "pandas",
  "pillow",
  "py3Dmol",
  "rdkit",
  "streamlit",
  "typer",
]

[project.scripts]
mn-ligand = "mn_ligand.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["mn_ligand*"]

[tool.setuptools.package-data]
"*" = ["*"]
